<resources>
    <string name="Delete">Delete</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="academic_info">Academic Info</string>
    <string name="accessibility_service_whats_app_business">WhatsApp Business Automate SMS Permission</string>
    <string name="active">Active</string>
    <string name="active_students">Active Students</string>
    <string name="add_batch">Add batch</string>
    <string name="add_class_work">Add Class Work</string>
    <string name="add_enquiry">Add Enquiry</string>
    <string name="add_exam">Add Exam</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_expense_category">Add Expense Category</string>
    <string name="add_fee">Add fee</string>
    <string name="add_home_work">Add Home Work</string>
    <string name="add_note">Add Note</string>
    <string name="add_salary">Add Salary</string>
    <string name="add_staff">Add Teacher</string>
    <string name="add_student">Add Student</string>
    <string name="add_view_marks">Add View Marks</string>
    <string name="address">Address</string>
    <string name="address_of_company">402, Possible Triangle, Mavdi Baypass road, Rajkot, Gujarat. India</string>
    <string name="admin">Admin</string>
    <string name="admin_gmail">Admin Gmail</string>
    <string name="admin_gmail_cant_be_empty_txt">Admin Gmail Can\'t Be Empty</string>
    <string name="admin_not_found_error_msg_txt">Admin Not Found !!! Check Admin Gmail Please</string>
    <string name="after_set_end_date_student_will_not_appear_in_attendance_list_and_same_other_places">After set end date. student will not appear in attendance list and same other places</string>
    <string name="all">All</string>
    <string name="all_batches">All Batches</string>
    <string name="all_time">All Time</string>
    <string name="android_app_specialist">Android App Specialist</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">TuFee</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="assign">Assign</string>
    <string name="assign_in_new_batch">Assign new Batch</string>
    <string name="assigned_batches">Assigned Batches</string>
    <string name="attendance">Attendance</string>
    <string name="attendance_message">This template will use when you send attendance sms to your students</string>
    <string name="attendance_summery">Attendance Summary</string>
    <string name="attendances">Attendances</string>
    <string name="basic_info">Basic Info</string>
    <string name="batch">Batch</string>
    <string name="batch_broadcast_sms">Batch Broadcast Sms</string>
    <string name="batch_details">Batch details</string>
    <string name="batch_joined">Batches Joined</string>
    <string name="batch_name">Batch Name</string>
    <string name="batch_nname">Batch\10Name</string>
    <string name="batch_operation_p_txt">Batch Operation</string>
    <string name="batch_permission_brief_txt">This Permission Will give access to Teacher Add New Batch, Edit Batch , Shift Batch And Delete Batch.</string>
    <string name="batches">Batches</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="business">Business</string>
    <string name="camera_permission_required">Camera Permission Required</string>
    <string name="can_t_let_empty_txt">Can not let empty</string>
    <string name="caste">caste</string>
    <string name="change_language">Change Language</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_me_for_send_report_on_whatsapp_directly">Check Me For send Report on whatsApp Directly</string>
    <string name="chip_text">Chip text</string>
    <string name="class_work">Class Work</string>
    <string name="class_work_date">Class Work Date</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="close_batch">Close Batch</string>
    <string name="close_student">Close Student</string>
    <string name="close_students">Close Students</string>
    <string name="collected_fee_summery">Collected Fee Summery</string>
    <string name="collected_fees">Collected Fees</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">0415b76f3fe04ac595b710683497075f</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="contact_info">Contact Info</string>
    <string name="contact_us">Contact Us</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="custom_arrow">-------&gt;</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="default_fee_details">Default Fee Details</string>
    <string name="default_web_client_id">996617465879-kl1v3prv83imc31um4ncdohpbip5jl8p.apps.googleusercontent.com</string>
    <string name="defult_webclient_id">996617465879-kl1v3prv83imc31um4ncdohpbip5jl8p.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="dhvanil_infotech">Dhvanil Infotech</string>
    <string name="download_sample">Sample File</string>
    <string name="due_fee_after_month">Due Fee After Month</string>
    <string name="due_fee_summery">Due Fee Summery</string>
    <string name="due_fees">Due Fees</string>
    <string name="due_namount">Due\10Amount</string>
    <string name="due_nfrom">Due\10From</string>
    <string name="due_ntill">Due\10Till</string>
    <string name="edit">Edit</string>
    <string name="edit_category_name">Edit Category Name</string>
    <string name="edit_expense_category">Edit Expense Category</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_salary">Edit Salary</string>
    <string name="edit_staff">Edit Staff</string>
    <string name="edit_student">Edit Student</string>
    <string name="end_date">End Date</string>
    <string name="father_name">Father name</string>
    <string name="gender">Gender</string>
    <string name="generate_student_report">Generate Student Report</string>
    <string name="institute_details">Institute Details</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mother_name">Mother Name</string>
    <string name="password">Password</string>
    <string name="personal_info">Personal Info</string>
    <string name="roll_number">Roll Number</string>
    <string name="save">save</string>
    <string name="school_name">School Name</string>
    <string name="select_start_date_amp_end_date">Select Start Date &amp; End Date</string>
    <string name="standard">Standard</string>
    <string name="start_date">Start Date</string>
    <string name="student_name">Student Name</string>
    <string name="student_password">Student Password</string>
    <string name="this_image_will_appear_on_the_documents_fee_payment_slip_student_report_card_id_card_etc_that_you_create">This Image will appear on the documents ( Fee Payment Slip , Student Report Card , Id Card, etc..) that you create</string>
    <string name="whatsapp_number">WhatsApp Number</string>
</resources>