<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/calendarHeader" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@+id/previousButton" android:padding="6dp" android:layout_width="32dp" android:layout_height="32dp" android:layout_margin="4dp" android:src="0x7f0800b4" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        <ImageButton android:id="@+id/forwardButton" android:padding="6dp" android:layout_width="32dp" android:layout_height="32dp" android:layout_margin="4dp" android:src="0x7f0800b5" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toEndOf="@+id/currentDateLabel" app:layout_constraintTop_toTopOf="0" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        <TextView android:textSize="12sp" android:textColor="@android:color/white" android:id="@+id/currentDateLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toEndOf="@+id/previousButton" app:layout_constraintTop_toTopOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/abbreviationsBar" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12sp" android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/mondayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_monday" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/tuesdayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_tuesday" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/wednesdayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_wednesday" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/thursdayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_thursday" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/fridayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_friday" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/saturdayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_saturday" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:textColor="@color/daysLabelColor" android:gravity="center_horizontal" android:id="@+id/sundayLabel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/material_calendar_sunday" android:layout_weight="1"/>
    </LinearLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <com.applandeo.materialcalendarview.extensions.CalendarViewPager android:id="@+id/calendarViewPager" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </ScrollView>
</LinearLayout>
