<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/dark_mode_aware_white" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="@dimen/_42sdp" app:layout_constraintTop_toTopOf="0">
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/back_press" android:padding="@dimen/_4sdp" android:layout_width="@dimen/_24sdp" android:layout_height="@dimen/_24sdp" android:src="@drawable/ic_close" android:contentDescription="@string/app_name" android:layout_marginStart="@dimen/_4sdp" app:tint="@color/text_color_dark"/>
        <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/text_color_dark" android:layout_gravity="center_vertical" android:id="@+id/title" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/add_student" android:maxLines="1" android:layout_weight="1" android:fontFamily="@font/bw_medium" android:layout_marginStart="@dimen/_8sdp"/>
        <TextView android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_vertical" android:id="@+id/save" android:background="@drawable/round_bg_holiday" android:paddingTop="@dimen/_4sdp" android:paddingBottom="@dimen/_4sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:fontFamily="@font/bw_medium" android:paddingStart="@dimen/_8sdp" android:paddingEnd="@dimen/_8sdp" android:layout_marginEnd="@dimen/_6sdp" android:backgroundTint="@color/secondaryColor"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <ProgressBar android:id="@+id/image_progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:elevation="56dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ScrollView android:background="@drawable/fragment_container_bg" android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="@dimen/_6sdp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:background="@drawable/border_card_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_6sdp">
                <p068de.hdodenhof.circleimageview.CircleImageView android:layout_gravity="center" android:id="@+id/add_student_photo" android:background="@drawable/ic_empty_profile_image" android:layout_width="@dimen/_60sdp" android:layout_height="@dimen/_60sdp" android:layout_margin="16dp"/>
                <TextView android:textSize="@dimen/_8sdp" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/_12sdp" android:text="@string/this_image_will_appear_on_the_documents_fee_payment_slip_student_report_card_id_card_etc_that_you_create" android:fontFamily="@font/bw_medium"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/border_card_bg" android:padding="@dimen/_6sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_6sdp">
                <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/text_color_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8sdp" android:text="@string/personal_info" android:fontFamily="@font/bw_medium" android:layout_marginStart="@dimen/_8sdp"/>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/student_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/student_name" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/father_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/father_name" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/mother_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/mother_name" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/date_of_birth" android:focusable="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/date_of_birth" android:cursorVisible="false" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:id="@+id/gender_spinner_text_input_lay" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" android:hint="@string/gender" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView android:textSize="@dimen/_10sdp" android:layout_gravity="center_vertical" android:id="@+id/gender" android:focusable="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:cursorVisible="false" style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/aadhar_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/aadhar_number" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/caste" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/caste" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/border_card_bg" android:padding="@dimen/_6sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_6sdp">
                <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/text_color_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8sdp" android:text="@string/student_password" android:fontFamily="@font/bw_medium" android:layout_marginStart="@dimen/_8sdp"/>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/password" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/border_card_bg" android:padding="@dimen/_6sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_6sdp">
                <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/text_color_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8sdp" android:text="@string/contact_info" android:fontFamily="@font/bw_medium" android:layout_marginStart="@dimen/_8sdp"/>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/whats_app_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/whatsapp_number" android:inputType="phone" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/mobile_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/mobile_number" android:inputType="phone" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/address" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/address" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/border_card_bg" android:padding="@dimen/_6sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_6sdp">
                <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/text_color_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8sdp" android:text="@string/institute_details" android:fontFamily="@font/bw_bold" android:layout_marginStart="@dimen/_8sdp"/>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/school_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/school_name" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/roll_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="0" android:hint="@string/roll_number" android:inputType="number" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_10sdp" android:id="@+id/standard" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/standard" android:fontFamily="@font/bw_regular"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
