<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/dark_mode_aware_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_12sdp" app:cardCornerRadius="@dimen/_8sdp">
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:padding="@dimen/_6sdp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/text_color_dark" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16sdp" android:layout_marginBottom="@dimen/_8sdp" android:text="@string/select_start_date_amp_end_date" android:fontFamily="@font/bw_bold" android:textAlignment="center"/>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_4sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/start_date" android:focusable="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/start_date" android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_4sdp" app:boxStrokeColor="@color/secondaryColor" app:hintTextColor="@color/secondaryColor" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/end_date" android:focusable="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/end_date" android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox android:id="@+id/isOnWhatsApp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/check_me_for_send_report_on_whatsapp_directly" android:layout_marginStart="@dimen/_12sdp" android:layout_marginEnd="@dimen/_12sdp"/>
        <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@+id/generate_student_report" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp" android:text="@string/generate_student_report" android:textAllCaps="false" android:fontFamily="@font/bw_bold" android:textAlignment="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>
